[package]
name = "tilvisan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tilvisan"
path = "src/main.rs"

[dependencies]
write-fonts = { version = "0.47.0", git = "https://github.com/googlefonts/fontations", branch = "autohint-needs", features = [
    "read",
] }
chrono = "0.4.44"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
log = "0.4"
logos = "0.14"
paste = "1.0.15"
skrifa = { version = "0.42.0", git = "https://github.com/googlefonts/fontations", branch = "autohint-needs",  features = [
    "autohinter",
] }
thiserror = "2.0.18"
env_logger = "0.11.10"
indexmap = "2.13.1"

[dev-dependencies]
glob = "0.3.3"
libtest-mimic = "0.8.2"
similar = "2.7.0"

[[test]]
name = "integration_test"
harness = false
